fix: re-enabled zoom on mobile, increased font size for search input boxes site-wide and add note section to Current Console tech tip on Gaming page

--- a/src/pages/internet.css
+++ b/src/pages/internet.css
@@ -54,6 +54,7 @@ form {
 .search input {
   background-color: transparent;
   color: white;
+  font-size: 16px;
   border: none;
   flex: 1;
   padding: 0px 0px 0px 10px;
